--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'mysql:mysql-connector-java:8.0.33'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
